fix fonts and spacing

--- a/css/index.css
+++ b/css/index.css
@@ -26,13 +26,51 @@ body {
   padding: 0;
   margin: 0;
   font-family: var(--main-font);
-  color: hsl(0, 0%, 30%);
+  color: hsl(0, 0%, 40%);
   background-color: var(--white);
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 400;
+  color: black;
+  margin-bottom: 5px;
+}
+h1 {
+  margin-top: 50px;
+}
+h2 {
+  margin-top: 40px;
+}
+h1 + h2 {
+  margin-top: 10px;
+}
+h3 {
+  margin-top: 20px;
+}
+h2 + h3 {
+  margin-top: 5px;
+}
+h4 {
+  margin-top: 10px;
+}
+h1 + p {
+  margin-top: 5px;
+}
+p {
+  margin: 0;
+}
+p + p {
+  margin: 13px 0;
 }
 p:last-child {
   margin-bottom: 0;
 }
 img {
+  margin: 30px;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -52,9 +90,6 @@ main {
   padding: 1rem;
   max-width: 800px;
   margin: 20px auto;
-}
-main :first-child {
-  margin-top: 0;
 }
 header {
   border-bottom: 1px dashed var(--lightgray);
@@ -164,14 +199,16 @@ pre:hover {
 .home {
   color: black;
   text-decoration: none;
-  /* font-weight: bold; */
-  font-size: 25px;
+  font-size: 2.5em;
   border-bottom: none !important;
   padding: 0 0;
   margin: 0;
 }
 .home a {
   color: black;
+}
+.home a:hover {
+  border-bottom: 2px solid rgba(0, 0, 0, 0);
 }
 .home :link:not(:hover) {
   text-decoration: none;
@@ -187,12 +224,8 @@ pre:hover {
   padding: 5px;
   display: inline-block;
 }
-.nav-item a[href]:not(:hover) {
-  /* border-bottom: 2px solid rgba(0,0,0,0); */
-}
 .nav-item-active {
   font-weight: 700;
-  /* border-bottom: 2px solid var(--blue); */
 }
 
 /* Posts list */
@@ -202,7 +235,7 @@ pre:hover {
 }
 .postlist-item {
   counter-increment: start-from -1;
-  margin: 10px 5px;
+  margin: 10px 25px;
   display: flex;
   justify-content: space-between;
 }
@@ -215,7 +248,7 @@ pre:hover {
   word-spacing: -0.5px;
   color: #b5b5b5;
   text-transform: uppercase;
-  font-weight: bold;
+  /* font-weight: bold; */
 }
 .postlist-link {
   color: #333;
@@ -226,7 +259,7 @@ pre:hover {
 }
 .tmpl-home .postlist-link {
   font-size: 1.1875em; /* 19px /16 */
-  font-weight: 700;
+  /* font-weight: 700; */
 }
 
 /* Tags */
@@ -241,10 +274,6 @@ pre:hover {
   color: var(--darkgreen);
   border-radius: 0.25em; /* 3px /12 */
   text-decoration: none;
-}
-a[href].post-tag,
-a[href].post-tag:visited {
-  /* color: #fff; */
 }
 
 /* Warning */
